Added Photos project

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -23,3 +23,7 @@ permalink: /projects
     all time.
   </p>
 </div>
+<div class="card mb--200">
+  <h1 class="h3"><a href="/projects/photos">Photos</a></h1>
+  <p>Some photos I've taken.</p>
+</div>
