Reversed direction of photos so new photos come first

--- a/_projects/photos.html
+++ b/_projects/photos.html
@@ -4,6 +4,6 @@ title: Photos
 permalink: /projects/photos
 ---
 
-{% for photo in site.data.photos %}
+{% for photo in site.data.photos reversed %}
 <img class="photo" src="{{ photo.link }}" alt="{{ photo.title }}" />
 {% endfor %}
