Changed wording of books section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ title: Home
   <h1 class="h3 fw-bold">Books</h1>
   <p>
     Some of the books I've read. The title links to that book's review (assuming
-    I reviewed that specific book). Only books rated 5/5 are listed here &mdash;
+    I reviewed that specific book). Only books rated 5/5 are listed below
+    &mdash;
     <a href="/projects/books">see the full list here.</a>
   </p>
   <table class="mt--100">
