Added Salary project page

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -27,3 +27,10 @@ permalink: /projects
   <h1 class="h3"><a href="/projects/photos">Photos</a></h1>
   <p>Some photos I've taken.</p>
 </div>
+<div class="card mb--200">
+  <h1 class="h3"><a href="/projects/salary">Salary</a></h1>
+  <p>
+    I believe in salary transparency. Most employers have access to salary
+    history so why not make mine public?
+  </p>
+</div>
