--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ title: Home
   {% endfor %}
 </section>
 
+<section class="home__cta mb--300">
+  {% include cta.html %}
+</section>
+
 <section class="mb--300">
   <h1 class="h3 fw-bold">Books</h1>
   <p>
