--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -12,7 +12,7 @@ permalink: /blog
     <td>
       <a href="{{ post.url }}">{{ post.title }}</a>
     </td>
-    <td>{{ post.date | date: '%m/%d/%Y' }}</td>
+    <td>{{ post.date | date: '%b %d, %Y' }}</td>
   </tr>
   {% endfor %}
 </table>
